Update index.html (1)

--- a/index.html
+++ b/index.html
@@ -3,60 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dhruv Joshi | AI/ML Engineer</title>
+  <title>Dhruv Joshi | Introduction</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Dhruv Joshi</h1>
-    <p>AI & Machine Learning Engineer</p>
     <nav>
-      <a href="#projects">Projects</a>
-      <a href="#experience">Experience</a>
-      <a href="#contact">Contact</a>
+      <ul>
+        <li><a href="index.html">Introduction</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="projects.html">Professional Projects</a></li>
+        <li><a href="knowledge.html">Knowledge Roadmap</a></li>
+        <li><a href="certificates.html">Certificates & Workshops</a></li>
+      </ul>
     </nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Data Scientist & AI Engineer passionate about deploying scalable machine‑learning systems and turning data into insight.</p>
-  </section>
+  <main>
+    <section id="intro">
+      <h1>Dhruv Joshi</h1>
+      <h2>Contact Details</h2>
+      <p><strong>Email:</strong> <a href="mailto:dhruvjoshi16dj@gmail.com">dhruvjoshi16dj@gmail.com</a></p>
+      <p><strong>Phone:</strong> 382-882-0186</p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/dhruv-joshi1603/" target="_blank">dhruv-joshi1603</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/Dhruv1603" target="_blank">Dhruv1603</a></p>
+      <p><strong>Address:</strong> 3080 E 54th Ave, Vancouver, BC, V5S 1Y5</p>
+    </section>
 
-  <section id="skills">
-    <h2>Core Skills</h2>
-    <ul>
-      <li>Python, R, SQL, Scikit‑learn, Pandas, NumPy</li>
-      <li>Power BI, Tableau, Matplotlib, Seaborn</li>
-      <li>Azure, GCP, Docker, Git, Jupyter</li>
-      <li>Regression, Classification, Clustering, Neural Networks</li>
-    </ul>
-  </section>
-
-  <section id="projects">
-    <h2>Key Projects</h2>
-    <ul>
-      <li><strong>Emotion AI:</strong> Detects non‑verbal human emotions.</li>
-      <li><strong>Eggplant Disease Detection:</strong> Deep‑learning aid for farmers.</li>
-      <li><strong>US Airline Sentiment Analysis:</strong> NLP analysis of airline tweets.</li>
-      <li><strong>Brain Tumor Detection:</strong> MRI‑based healthcare AI system.</li>
-    </ul>
-  </section>
-
-  <section id="experience">
-    <h2>Professional Experience</h2>
-    <p><strong>Jay Analytix — Gen AI Engineer:</strong> Built multilingual chatbots using Azure & GCP, deployed full MLOps pipelines.</p>
-    <p><strong>Atem — AI Engineer:</strong> Developed cancer‑risk prediction models and analytics dashboards.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:dhruvjoshi16dj@gmail.com">dhruvjoshi16dj@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/Dhruv1603">Dhruv1603</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/dhruv-joshi1603/">Dhruv Joshi</a></p>
-  </section>
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li>
+          <strong>Postgraduate in Artificial Intelligence & Machine Learning</strong><br/>
+          Fanshawe College, London, ON, Canada<br/>
+          Dean’s and President’s Honour | CGPA: 4.01/4.20
+        </li>
+        <li>
+          <strong>Bachelor of Engineering in Computer Engineering</strong><br/>
+          Gujarat Technological University, Ahmedabad, India<br/>
+          Dean’s Honour | CGPA: 8.66/10 | State Gold Medal in Chess
+        </li>
+      </ul>
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 Dhruv Joshi</p>
+    <p>©2025 Dhruv Joshi</p>
   </footer>
 </body>
 </html>
