--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-    <section id="intro">
+    <div class="profile-card">
       <h1>Dhruv Joshi</h1>
       <h2>Contact Details</h2>
       <p><strong>Email:</strong> <a href="mailto:dhruvjoshi16dj@gmail.com">dhruvjoshi16dj@gmail.com</a></p>
@@ -28,23 +28,21 @@
       <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/dhruv-joshi1603/" target="_blank">dhruv-joshi1603</a></p>
       <p><strong>GitHub:</strong> <a href="https://github.com/Dhruv1603" target="_blank">Dhruv1603</a></p>
       <p><strong>Address:</strong> 3080 E 54th Ave, Vancouver, BC, V5S 1Y5</p>
-    </section>
 
-    <section id="education">
       <h2>Education</h2>
       <ul>
         <li>
           <strong>Postgraduate in Artificial Intelligence & Machine Learning</strong><br/>
-          Fanshawe College, London, ON, Canada<br/>
-          Dean’s and President’s Honour | CGPA: 4.01/4.20
+          Fanshawe College, London, ON, Canada – Dean’s & President’s Honour<br/>
+          CGPA: 4.01/4.20
         </li>
         <li>
           <strong>Bachelor of Engineering in Computer Engineering</strong><br/>
-          Gujarat Technological University, Ahmedabad, India<br/>
-          Dean’s Honour | CGPA: 8.66/10 | State Gold Medal in Chess
+          Gujarat Technological University, Ahmedabad, India – Dean’s Honour<br/>
+          CGPA: 8.66/10 | State Gold Medal in Chess
         </li>
       </ul>
-    </section>
+    </div>
   </main>
 
   <footer>
