Update index.html (2)

--- a/index.html
+++ b/index.html
@@ -29,19 +29,31 @@
       <p><strong>GitHub:</strong> <a href="https://github.com/Dhruv1603" target="_blank">Dhruv1603</a></p>
       <p><strong>Address:</strong> 3080 E 54th Ave, Vancouver, BC, V5S 1Y5</p>
 
-      <h2>Education</h2>
-      <ul>
-        <li>
-          <strong>Postgraduate in Artificial Intelligence & Machine Learning</strong><br/>
-          Fanshawe College, London, ON, Canada – Dean’s & President’s Honour<br/>
-          CGPA: 4.01/4.20
-        </li>
-        <li>
-          <strong>Bachelor of Engineering in Computer Engineering</strong><br/>
-          Gujarat Technological University, Ahmedabad, India – Dean’s Honour<br/>
-          CGPA: 8.66/10 | State Gold Medal in Chess
-        </li>
-      </ul>
+      <section id="education" style="margin-top:2.3em;">
+        <h2>Education</h2>
+        <div style="margin-bottom: 1.5em;">
+          <h3 style="margin-bottom:0.2em; font-size:1.1em;">
+            <strong>Postgraduate in Artificial Intelligence &amp; Machine Learning</strong>
+          </h3>
+          <div>Fanshawe College, London, ON, Canada</div>
+          <div style="font-size:0.97em; color:#273b56;">
+            Dean’s &amp; President’s Honour
+          </div>
+          <div style="margin-top:0.3em;">CGPA: <strong>4.01/4.20</strong></div>
+        </div>
+        <div>
+          <h3 style="margin-bottom:0.2em; font-size:1.1em;">
+            <strong>Bachelor of Engineering in Computer Engineering</strong>
+          </h3>
+          <div>Gujarat Technological University, Ahmedabad, India</div>
+          <div style="font-size:0.97em; color:#273b56;">
+            Dean’s Honour
+          </div>
+          <div style="margin-top:0.3em;">
+            CGPA: <strong>8.66/10</strong> &nbsp;|&nbsp; State Gold Medal in Chess
+          </div>
+        </div>
+      </section>
     </div>
   </main>
 
