Update index.html (3)

--- a/index.html
+++ b/index.html
@@ -31,26 +31,28 @@
 
       <section id="education" style="margin-top:2.3em;">
         <h2>Education</h2>
-        <div style="margin-bottom: 1.5em;">
-          <h3 style="margin-bottom:0.2em; font-size:1.1em;">
-            <strong>Postgraduate in Artificial Intelligence &amp; Machine Learning</strong>
-          </h3>
+        <div style="margin-bottom: 2em;">
+          <div style="font-size:1.17em; font-weight:600; letter-spacing:0.1px; margin-bottom:0.5em;">
+            Postgraduate in Artificial Intelligence &amp; Machine Learning
+          </div>
           <div>Fanshawe College, London, ON, Canada</div>
-          <div style="font-size:0.97em; color:#273b56;">
+          <div style="font-size:1em; color:#273b56;">
             Dean’s &amp; President’s Honour
           </div>
-          <div style="margin-top:0.3em;">CGPA: <strong>4.01/4.20</strong></div>
+          <div style="margin-top:0.35em;">
+            CGPA: <span style="font-weight:700;">4.01/4.20</span>
+          </div>
         </div>
         <div>
-          <h3 style="margin-bottom:0.2em; font-size:1.1em;">
-            <strong>Bachelor of Engineering in Computer Engineering</strong>
-          </h3>
+          <div style="font-size:1.11em; font-weight:600; letter-spacing:0.1px; margin-bottom:0.5em;">
+            Bachelor of Engineering in Computer Engineering
+          </div>
           <div>Gujarat Technological University, Ahmedabad, India</div>
-          <div style="font-size:0.97em; color:#273b56;">
+          <div style="font-size:1em; color:#273b56;">
             Dean’s Honour
           </div>
           <div style="margin-top:0.3em;">
-            CGPA: <strong>8.66/10</strong> &nbsp;|&nbsp; State Gold Medal in Chess
+            CGPA: <span style="font-weight:700;">8.66/10</span> &nbsp;|&nbsp; State Gold Medal in Chess
           </div>
         </div>
       </section>
