--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Education</h2>
         <div style="margin-bottom: 2em;">
           <div style="font-size:1.17em; font-weight:600; letter-spacing:0.1px; margin-bottom:0.5em;">
-            Postgraduate in Artificial Intelligence &amp; Machine Learning
+            Postgraduate in Artificial Intelligence &  Machine Learning;
           </div>
           <div>Fanshawe College, London, ON, Canada</div>
           <div style="font-size:1em; color:#273b56;">
