--- a/index.html
+++ b/index.html
@@ -5,6 +5,115 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dhruv Joshi | Introduction</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      margin: 0;
+      background: #f4f7fb;
+      color: #232a33;
+    }
+    header nav {
+      background: #273b56;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(39,59,86,0.03);
+    }
+    header nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: inline-flex;
+    }
+    header nav ul li {
+      margin: 0 1.5em;
+    }
+    header nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 1.3em 0;
+      display: block;
+      transition: color 0.2s;
+    }
+    header nav ul li a:hover {
+      color: #58a4ff;
+      border-bottom: 2px solid #58a4ff;
+    }
+    main {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 85vh;
+      padding-top: 48px;
+    }
+    .profile-card {
+      background: #fff;
+      max-width: 750px;
+      width: 100%;
+      margin: 3em auto 0 auto;
+      border-radius: 16px;
+      box-shadow: 0 4px 28px rgba(40,60,90,0.11), 0 1.5px 3.5px rgba(39,59,86,0.04);
+      padding: 3em 3em 2.5em 3em;
+    }
+    .profile-card h1 {
+      margin-top: 0;
+      font-size: 2.3em;
+      letter-spacing: 0.5px;
+    }
+    .profile-card h2 {
+      font-size: 1.3em;
+      margin-top: 2em;
+      margin-bottom: 1em;
+      color: #273b56;
+    }
+    .profile-card p, .profile-card ul {
+      font-size: 1.13em;
+    }
+    .profile-card ul {
+      padding-left: 1.3em;
+    }
+    #education {
+      margin-top: 2.3em;
+    }
+    .degree-title {
+      font-size: 1.23em;
+      font-weight: 700;
+      letter-spacing: 0.0px;
+      margin-bottom: 0.7em;
+      margin-top: 1.1em;
+    }
+    .edu-block {
+      margin-bottom: 2.5em;
+    }
+    .edu-school {
+      font-size: 1.06em;
+    }
+    .edu-desc {
+      font-size: 1.03em;
+      color: #273b56;
+    }
+    .edu-meta {
+      margin-top: 0.35em;
+      font-size: 1.09em;
+    }
+    footer {
+      background: #273b56;
+      color: #fff;
+      text-align: center;
+      font-size: 0.97em;
+      padding: 0.7em;
+      margin-top: 2em;
+      border-radius: 0 0 8px 8px;
+    }
+    /* Make sure long degree names don't wrap */
+    .degree-title { white-space: nowrap; }
+    @media (max-width: 800px) {
+      .profile-card {
+        max-width: 95vw;
+        padding: 1.2em 0.7em 1.5em 0.7em;
+      }
+      .degree-title { font-size: 1.05em; white-space: normal; }
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -29,31 +138,19 @@
       <p><strong>GitHub:</strong> <a href="https://github.com/Dhruv1603" target="_blank">Dhruv1603</a></p>
       <p><strong>Address:</strong> 3080 E 54th Ave, Vancouver, BC, V5S 1Y5</p>
 
-      <section id="education" style="margin-top:2.3em;">
+      <section id="education">
         <h2>Education</h2>
-        <div style="margin-bottom: 2em;">
-          <div style="font-size:1.17em; font-weight:600; letter-spacing:0.1px; margin-bottom:0.5em;">
-            Postgraduate in Artificial Intelligence &  Machine Learning;
-          </div>
-          <div>Fanshawe College, London, ON, Canada</div>
-          <div style="font-size:1em; color:#273b56;">
-            Dean’s &amp; President’s Honour
-          </div>
-          <div style="margin-top:0.35em;">
-            CGPA: <span style="font-weight:700;">4.01/4.20</span>
-          </div>
+        <div class="edu-block">
+          <div class="degree-title"><strong>Postgraduate in Artificial Intelligence & Machine Learning</strong></div>
+          <div class="edu-school">Fanshawe College, London, ON, Canada</div>
+          <div class="edu-desc">Dean’s & President’s Honour</div>
+          <div class="edu-meta">CGPA: <span style="font-weight:700;">4.01/4.20</span></div>
         </div>
-        <div>
-          <div style="font-size:1.11em; font-weight:600; letter-spacing:0.1px; margin-bottom:0.5em;">
-            Bachelor of Engineering in Computer Engineering
-          </div>
-          <div>Gujarat Technological University, Ahmedabad, India</div>
-          <div style="font-size:1em; color:#273b56;">
-            Dean’s Honour
-          </div>
-          <div style="margin-top:0.3em;">
-            CGPA: <span style="font-weight:700;">8.66/10</span> &nbsp;|&nbsp; State Gold Medal in Chess
-          </div>
+        <div class="edu-block">
+          <div class="degree-title"><strong>Bachelor of Engineering in Computer Engineering</strong></div>
+          <div class="edu-school">Gujarat Technological University, Ahmedabad, India</div>
+          <div class="edu-desc">Dean’s Honour</div>
+          <div class="edu-meta">CGPA: <span style="font-weight:700;">8.66/10</span> &nbsp;|&nbsp; State Gold Medal in Chess</div>
         </div>
       </section>
     </div>
