--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
     .profile-card {
       background: #fff;
-      max-width: 750px;
+      max-width: 1000px;
       width: 100%;
       margin: 3em auto 0 auto;
       border-radius: 16px;
@@ -80,6 +80,7 @@
       letter-spacing: 0.0px;
       margin-bottom: 0.7em;
       margin-top: 1.1em;
+      white-space: nowrap;
     }
     .edu-block {
       margin-bottom: 2.5em;
@@ -104,14 +105,12 @@
       margin-top: 2em;
       border-radius: 0 0 8px 8px;
     }
-    /* Make sure long degree names don't wrap */
-    .degree-title { white-space: nowrap; }
-    @media (max-width: 800px) {
+    @media (max-width: 1200px) {
       .profile-card {
-        max-width: 95vw;
+        max-width: 99vw;
         padding: 1.2em 0.7em 1.5em 0.7em;
       }
-      .degree-title { font-size: 1.05em; white-space: normal; }
+      .degree-title { white-space: normal; }
     }
   </style>
 </head>
