--- a/experience.html
+++ b/experience.html
@@ -39,10 +39,6 @@
       color: #7b8a97;
       margin-bottom: 0.35em;
     }
-    .job-details {
-      margin: 0 0 0.3em 0;
-      font-size: 1.10em;
-    }
     .exp-card ul {
       margin-top: 0.4em;
       margin-bottom: 0.8em;
@@ -50,6 +46,7 @@
     }
     .exp-card li {
       margin-bottom: 0.45em;
+      font-size: 1.10em;
     }
     @media (max-width: 1200px) {
       .exp-card { max-width: 99vw; padding: 1.3em 1.1em 1em 1.1em; }
@@ -104,3 +101,43 @@
         <div class="role">Finance Analyst</div>
         <div class="company-row">Hemil Joshi Associates &nbsp;|&nbsp; On-site</div>
         <div class="dates">May 2023 – Nov 2023</div>
+        <ul>
+          <li>Analyzed multi-channel customer data, driving 15% revenue growth and efficiency gains.</li>
+          <li>Built multilingual NLP pipelines for real-time sentiment and support analytics using Python and Azure Cognitive Services.</li>
+          <li>Automated reporting & dashboards in Power BI, enhancing executive insight with real-time data.</li>
+          <li>Developed ML models for customer intent detection and forecasting, enabling product team strategy.</li>
+        </ul>
+      </div>
+      
+      <!-- AaNeel Tech -->
+      <div class="job-block">
+        <div class="role">Data Analyst Intern</div>
+        <div class="company-row">AaNeel Technology Solutions Pvt. Ltd., USA &nbsp;|&nbsp; On-site</div>
+        <div class="dates">Jan 2023 – Apr 2023</div>
+        <ul>
+          <li>Automated data collection and cleansing using Selenium, BeautifulSoup, and Power Query.</li>
+          <li>Developed executive Power BI dashboards to guide business decisions.</li>
+          <li>Streamlined data transformation pipelines for scalable analytics and business development.</li>
+        </ul>
+      </div>
+      
+      <!-- LogicArt Tech -->
+      <div class="job-block">
+        <div class="role">Python Data Science Intern</div>
+        <div class="company-row">LogicArt Technologies &nbsp;|&nbsp; On-site</div>
+        <div class="dates">Jun 2022 – Dec 2022</div>
+        <ul>
+          <li>Constructed efficient ETL pipelines with Pandas & NumPy, reducing data errors and boosting consistency.</li>
+          <li>Conducted exploratory data analysis and built machine learning models for business growth opportunities.</li>
+        </ul>
+      </div>
+      <!-- TEST -->
+      <div>TEST</div>
+    </div>
+  </main>
+
+  <footer>
+    <p>©2025 Dhruv Joshi</p>
+  </footer>
+</body>
+</html>
