--- a/experience.html
+++ b/experience.html
@@ -130,10 +130,7 @@
           <li>Constructed efficient ETL pipelines with Pandas & NumPy, reducing data errors and boosting consistency.</li>
           <li>Conducted exploratory data analysis and built machine learning models for business growth opportunities.</li>
         </ul>
-      </div>
-      <!-- TEST -->
-      <div>TEST</div>
-    </div>
+      </div>    </div>
   </main>
 
   <footer>
