--- a/knowledge.html
+++ b/knowledge.html
@@ -102,35 +102,35 @@
       <div class="timeline-title">My Knowledge Roadmap</div>
       <div class="timeline">
 
-        <!-- 2017: Foundations -->
+        <!-- 2017: Data Analysis Exposure -->
         <div class="milestone left">
           <div class="milestone-content">
             <div class="milestone-year">2017</div>
-            <div class="milestone-title">Start: Computer Engineering Degree</div>
+            <div class="milestone-title">Introduction to Data Analysis & Digital Skills</div>
             <div class="milestone-desc">
-              Began B.E., Computer Engineering, mastering programming fundamentals, core mathematics, algorithms, and database systems. Early exposure to Python, SQL, and basic analytics.
+              Began independent learning in data analysis, Excel basics, and foundational programming through online platforms and applied mini-projects.
             </div>
           </div>
         </div>
 
-        <!-- 2018: First Analytics/Programming Exposure -->
+        <!-- 2018: Data Tools and Exploration -->
         <div class="milestone right">
           <div class="milestone-content">
             <div class="milestone-year">2018</div>
-            <div class="milestone-title">Data Science Awareness</div>
+            <div class="milestone-title">Growing Data Skills: Visualization & Databases</div>
             <div class="milestone-desc">
-              Completed introductory coursework in data science, statistics, and basic visualization. Developed first academic projects and reports with Excel and data wrangling.
+              Expanded knowledge in Excel, basic SQL, and introductory visualization; participated in beginner workshops for exploratory analysis.
             </div>
           </div>
         </div>
 
-        <!-- 2019: Early Data Science Projects -->
+        <!-- 2019: Started B.E. Computer Engineering -->
         <div class="milestone left">
           <div class="milestone-content">
             <div class="milestone-year">2019</div>
-            <div class="milestone-title">Technical Upskilling — Coding & Visualization</div>
+            <div class="milestone-title">Bachelor of Engineering — Computer Engineering</div>
             <div class="milestone-desc">
-              Completed online certifications in Python, SQL for Data Analysis, and Tableau; participated in workshops covering ethical hacking and cybersecurity essentials.
+              Enrolled in B.E., Computer Engineering. Built foundations in mathematics, algorithms, software principles, and database design; first in-depth exposure to Python and applied coding.
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
             <div class="milestone-year">2020</div>
             <div class="milestone-title">Certification Milestones</div>
             <div class="milestone-desc">
-              Credentialed in Data Viz Techniques, Cyber Security, Bug Bounty, Facebook Security, and AI Bot Challenges. Built first machine learning models and performed statistical analysis using R and Python.
+              Completed certifications in Data Visualization, Cyber Security, Bug Bounty, and Facebook Security; constructed first applied ML and statistics projects in R/Python.
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
             <div class="milestone-year">2021</div>
             <div class="milestone-title">Business Intelligence & Automation</div>
             <div class="milestone-desc">
-              Built executive dashboards with Power BI and Tableau in both academic and internship settings; automated ETL processes and began hands-on NLP projects.
+              Built dashboards using Power BI and Tableau. Automated ETL workflows; started real-world NLP and analytics projects in academia and internships.
             </div>
           </div>
         </div>
@@ -161,10 +161,9 @@
         <div class="milestone right">
           <div class="milestone-content">
             <div class="milestone-year">2022</div>
-            <div class="milestone-title">First Industry Experience & ML</div>
+            <div class="milestone-title">Professional Experience & Advanced ML</div>
             <div class="milestone-desc">
-              Python Data Science Intern, LogicArt Technologies: Developed ETL pipelines, predictive ML models, and performed EDA and semi-supervised learning on real datasets.<br>
-              Workshops: PLC/Excel for Data Analysis, Startups & Entrepreneurship.
+              Data Science Intern, LogicArt Technologies: Constructed ETL pipelines, predictive ML models, and handled EDA/semi-supervised learning. Attended workshops in PLC/Excel and startup analytics.
             </div>
           </div>
         </div>
@@ -173,9 +172,9 @@
         <div class="milestone left">
           <div class="milestone-content">
             <div class="milestone-year">2023</div>
-            <div class="milestone-title">Cloud/NLP/Analytics</div>
+            <div class="milestone-title">Cloud, NLP, and Analytics in Industry</div>
             <div class="milestone-desc">
-              Hemil Joshi Associates: Automated BI and NLP analytics on Azure; led customer insight initiatives. Completed Google AI & ML, Microsoft Azure Cloud, and advanced R workshops.
+              Worked at Hemil Joshi Associates: Automated BI/NLP analytics on Azure, led customer analytics; earned certifications in Google AI, ML, and Microsoft Azure.
             </div>
           </div>
         </div>
@@ -186,19 +185,18 @@
             <div class="milestone-year">2024</div>
             <div class="milestone-title">Postgraduate in AI & ML</div>
             <div class="milestone-desc">
-              Fanshawe College, Canada (CGPA 4.01/4.20): Specialized in NLP, deep learning, computer vision, and scalable AI/ML deployment (Cloud/GKE/CI-CD).
-              Led production AI projects (healthcare, chatbots) and honed MLOps expertise.
+              Graduated Fanshawe College, Canada (CGPA 4.01/4.20). Focused on NLP, deep learning, large-scale MLOps, cloud AI deployment, and led major production AI/healthcare/chatbot projects.
             </div>
           </div>
         </div>
 
-        <!-- 2025: Advanced LLMs/Leadership -->
+        <!-- 2025: LLMs/Leadership -->
         <div class="milestone left">
           <div class="milestone-content">
             <div class="milestone-year">2025</div>
-            <div class="milestone-title">GenAI, LLMs, Leadership</div>
+            <div class="milestone-title">GenAI, LLMs, and Leadership</div>
             <div class="milestone-desc">
-              Gen AI Engineer (Jay Analytix): Built and deployed multilingual GPT-4 chatbots, scalable MLOps, and advanced intent detection solutions. Continuing research in generative AI, cloud-native architectures, and enterprise-level AI product build.
+              Gen AI Engineer, Jay Analytix: Built/deployed multilingual GPT-4 chatbots, intent detection, and hybrid MLOps solutions at enterprise scale; active in generative AI research and product leadership.
             </div>
           </div>
         </div>
