--- a/knowledge.html
+++ b/knowledge.html
@@ -74,6 +74,16 @@
       margin-bottom: 0.2em;
       line-height: 1.67;
     }
+    .milestone.future .milestone-content {
+      border-left: 5px dashed #1fa566;
+      border-right: none;
+      background: #f7fff9;
+      box-shadow: 0 5px 18px rgba(39,176,113,0.07);
+    }
+    .milestone.future .milestone-year {
+      color: #1fa566;
+    }
+    .milestone.future .milestone-title { color: #138057; }
     @media (max-width:950px) {
       .timeline-container, .timeline {width: 100%;}
     }
@@ -200,6 +210,18 @@
             </div>
           </div>
         </div>
+
+        <!-- More to go -->
+        <div class="milestone right future">
+          <div class="milestone-content">
+            <div class="milestone-year">Future</div>
+            <div class="milestone-title">More to Come – The Journey Continues</div>
+            <div class="milestone-desc">
+              Relentless about growth, innovation, and impact—continually exploring breakthroughs in generative AI, self-supervised learning, cloud-native architectures, and building products that matter. Forever learning, always contributing, never settling for average.
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </main>
