--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <p><strong>Phone:</strong> 382-882-0186</p>
       <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/dhruv-joshi1603/" target="_blank">dhruv-joshi1603</a></p>
       <p><strong>GitHub:</strong> <a href="https://github.com/Dhruv1603" target="_blank">Dhruv1603</a></p>
-      <p><strong>Address:</strong> 3080 E 54th Ave, Vancouver, BC, V5S 1Y5</p>
+      <p><strong>Address:</strong> Toronto, ON, Canada</p>
 
       <section id="education">
         <h2>Education</h2>
