--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       margin-top: 0;
       font-size: 2.3em;
       letter-spacing: 0.5px;
+      margin-bottom: 0.3em;
     }
     .profile-card h2 {
       font-size: 1.3em;
@@ -70,6 +71,19 @@
     }
     .profile-card ul {
       padding-left: 1.3em;
+    }
+    .professional-summary {
+      background: linear-gradient(135deg, #f8f9fc 0%, #e8eef5 100%);
+      border-left: 4px solid #58a4ff;
+      padding: 1.5em 1.8em;
+      margin: 1.5em 0 2em 0;
+      border-radius: 8px;
+      font-size: 1.06em;
+      line-height: 1.7;
+      color: #2c3e50;
+    }
+    .professional-summary strong {
+      color: #273b56;
     }
     #education {
       margin-top: 2.3em;
@@ -111,6 +125,10 @@
         padding: 1.2em 0.7em 1.5em 0.7em;
       }
       .degree-title { white-space: normal; }
+      .professional-summary {
+        padding: 1.2em 1em;
+        font-size: 1em;
+      }
     }
   </style>
 </head>
@@ -130,6 +148,11 @@
   <main>
     <div class="profile-card">
       <h1>Dhruv Joshi</h1>
+      
+      <div class="professional-summary">
+        <strong>Data Scientist & AI Engineer</strong> with proven expertise deploying production-grade AI systems that drive measurable business outcomes. Currently engineering multilingual GenAI chatbots and real-time conversational AI achieving <strong>35% efficiency improvements</strong> and serving <strong>1,000+ concurrent users</strong> across enterprise clients. Specialized in end-to-end machine learning pipelines—from statistical modeling and feature engineering to MLOps deployment on Azure and GCP cloud platforms. Track record includes developing cancer risk prediction models with <strong>92% accuracy</strong> processing 50,000+ patient records, delivering <strong>$180K revenue growth</strong> through customer analytics, and building NLP sentiment analysis systems processing 25,000+ interactions monthly. Expert in transforming complex data challenges into scalable AI solutions using Python, deep learning frameworks, and modern MLOps practices. Passionate about leveraging cutting-edge AI technologies—including GPT-4, LangChain, and model fine-tuning—to solve real-world problems across healthcare, finance, and customer experience domains.
+      </div>
+
       <h2>Contact Details</h2>
       <p><strong>Email:</strong> <a href="mailto:dhruvjoshi16dj@gmail.com">dhruvjoshi16dj@gmail.com</a></p>
       <p><strong>Phone:</strong> 382-882-0186</p>
@@ -142,13 +165,13 @@
         <div class="edu-block">
           <div class="degree-title"><strong>Postgraduate in Artificial Intelligence & Machine Learning</strong></div>
           <div class="edu-school">Fanshawe College, London, ON, Canada</div>
-          <div class="edu-desc">Dean’s & President’s Honour</div>
+          <div class="edu-desc">Dean's & President's Honour</div>
           <div class="edu-meta">CGPA: <span style="font-weight:700;">4.01/4.20</span></div>
         </div>
         <div class="edu-block">
           <div class="degree-title"><strong>Bachelor of Engineering in Computer Engineering</strong></div>
           <div class="edu-school">Gujarat Technological University, Ahmedabad, India</div>
-          <div class="edu-desc">Dean’s Honour</div>
+          <div class="edu-desc">Dean's Honour</div>
           <div class="edu-meta">CGPA: <span style="font-weight:700;">8.66/10</span> &nbsp;|&nbsp; State Gold Medal in Chess</div>
         </div>
       </section>
