--- a/experience.html
+++ b/experience.html
@@ -106,7 +106,7 @@
         <ul class="projects">
           <li>
             <span class="project-title">Multilingual GenAI Chatbot Platform:</span>
-            Designed and deployed conversational AI chatbots (150+ languages, TTS & STT) using GPT-4, LangChain, ElevenLabs, and Azure Cognitive Services.<br>
+            Designed and deployed conversational AI chatbots (150+ languages, TTS & STT) using Custom trained and fintune transformer on top of GPT-4, LangChain, ElevenLabs, and Azure Cognitive Services.<br>
             <span class="outcome">Built asynchronous pipelines (Azure OpenAI, GCP GKE)—achieved sub-second response times with scalable translation and synthesis.</span>
           </li>
           <li>
